--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,7 @@ def deployArtifact = deploy.targets.roborio.artifacts.frcJava
 wpi.java.debugJni = false
 
 // Set this to true to enable desktop support.
-def includeDesktopSupport = true
-
-allprojects {
-    repositories {
-        maven { url 'https://jitpack.io' }
-    }
-}
+def includeDesktopSupport = false
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
@@ -72,8 +66,6 @@ dependencies {
     simulationRelease wpi.sim.enableRelease()
 
     testImplementation 'junit:junit:4.13.1'
-
-    implementation 'com.github.StuyPulse:StuyLib:v2022.7.3'
 }
 
 // Simulation configuration (e.g. environment variables).
